Update user guide.

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -128,12 +128,12 @@
             "subtitleAuthor": "Author",
             "subtitleAnswercount": "Answercount",
             "subtitleTags": "Tags",
-            "descriptionSubject": "The course name and code associated with this question.",
+            "descriptionSubject": "The course name and code the question belongs to.",
             "descriptionUnresolvedQuestion": "The author of the question has NOT accepted an answer as acceptable.",
             "descriptionResolvedQuestion": "The author of the question has accepted an answer as acceptable.",
             "descriptionPublicQuestion": "The question can be viewed by everyone, including users who are not logged in.",
             "descriptionProtectedQuestion": "The question can only be viewed by logged-in users.",
-            "descriptionTopic": "The course topic this question belongs to.",
+            "descriptionTopic": "The course topic the question belongs to.",
             "descriptionCreationDate": "How long time ago the question was asked.",
             "descriptionQuestionTitle": "The title of the question.",
             "descriptionAuthor": "The user who created this question.",
