add many translations and impl infinite scrolling on user management

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -105,14 +105,26 @@
         "tagManagement": "Tag Management",
         "addNewCourse": "Add new Course Code",
         "courseName": "Course Name",
-        "teacherName": "Initial Teacher(optional comma seperated)",
+        "teacherName": "Initial teachers (optional, comma seperated)",
         "courseCodePlaceHolder": "Enter the course code",
         "courseNamePlaceHolder": "Enter the course name",
-        "teacherNamePlaceHolder": "Enter the teacher(s) name",
-        "addCourse": "+ Add Course",
+        "teacherNamePlaceHolder": "e.g. teacher1@ltu.se, teacher2@ltu.se",
+        "addCourse": "Add Course",
         "manageCourse": "Enter the course code or Name",
+        "manageExistingCourses": "Manage Existing Courses",
         "manageTag": "Search tags",
         "manageUser": "Search Users",
+        "courseCode": "Course Code",
+        "teachers": "Teachers",
+        "actions": "Actions",
+        "searchUser": "Search users by username or email",
+        "status": "Status",
+        "block": "Block",
+        "unblock": "Unblock",
+        "blocked": "Blocked",
+        "active": "Active",
+        "nrOfUsersFound": "Found {{count}} users",
+        "noUsersFound": "No users found",
         "answerCardComments": {
             "commentLabelMarker": "✔ Your latest comment",
             "commentsListTitle": "View Comments",
