--- a/src/locale/sv.json
+++ b/src/locale/sv.json
@@ -101,6 +101,31 @@
             "questionDelete": "Radera"
         },
 
+        "courseManagement": "Hantera kurser",
+        "userManagement": "Hantera användare",
+        "tagManagement": "Hantera taggar",
+        "addNewCourse": "Lägg till ny kurskod",
+        "courseName": "Kursnamn",
+        "teacherName": "Initiala lärare (valfritt, komma-separerade)",
+        "courseCodePlaceHolder": "Skriv in kurskod",
+        "courseNamePlaceHolder": "Skriv in kursnamn",
+        "teacherNamePlaceHolder": "T.ex lärare1@ltu.se, lärare2@ltu.se",
+        "addCourse": "Lägg till kurs",
+        "manageCourse": "Skriv in kurskod eller kursnamn",
+        "manageExistingCourses": "Hantera existerande kurser",
+        "manageTag": "Sök efter taggar",
+        "manageUser": "Sök efter användare",
+        "courseCode": "Kurskod",
+        "teachers": "Lärare",
+        "actions": "Åtgärder",
+        "searchUser": "Sök användare på användarnamn eller e-postadress",
+        "status": "Status",
+        "block": "Blockera",
+        "unblock": "Avblockera",
+        "blocked": "Blockerad",
+        "active": "Aktiv",
+        "nrOfUsersFound": "Hittade {{count}} användare",
+        "noUsersFound": "Inga användare hittade",
         "answerCardComments": {
             "commentLabelMarker": "✔ Din senaste kommentar",
             "commentsListTitle": "Läs Kommentarer",
