--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -72,6 +72,8 @@
         "tagLimitWarning": "Please limit your tags to 5 or fewer.",
         "nrOfQuestionsFound": "Found {{count}} questions",
         "backToQA": "Back to Q&A",
+        "acceptedAnswer": "Accepted answer",
+        "markAsAccepted": "Mark as accepted",
 
         "header": {
             "headerHeadline": "LTU Q&A",
