mvp of admin course management finished

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -110,7 +110,7 @@
         "courseNamePlaceHolder": "Enter the course name",
         "teacherNamePlaceHolder": "e.g. teacher1@ltu.se, teacher2@ltu.se",
         "addCourse": "Add Course",
-        "manageCourse": "Enter the course code or Name",
+        "searchCoursePlaceholder": "Enter the course code or name",
         "manageExistingCourses": "Manage Existing Courses",
         "manageTag": "Search tags",
         "manageUser": "Search Users",
@@ -125,6 +125,10 @@
         "active": "Active",
         "nrOfUsersFound": "Found {{count}} users",
         "noUsersFound": "No users found",
+        "addTeacherToSubject": "Add teachers to course: {{subject}}",
+        "addTeacher": "Add Teacher",
+        "cancelChanges": "Cancel changes",
+        "searchSubjects": "Search courses",
         "answerCardComments": {
             "commentLabelMarker": "✔ Your latest comment",
             "commentsListTitle": "View Comments",
