--- a/src/locale/sv.json
+++ b/src/locale/sv.json
@@ -111,7 +111,7 @@
         "courseNamePlaceHolder": "Skriv in kursnamn",
         "teacherNamePlaceHolder": "T.ex lärare1@ltu.se, lärare2@ltu.se",
         "addCourse": "Lägg till kurs",
-        "manageCourse": "Skriv in kurskod eller kursnamn",
+        "searchCoursePlaceholder": "Skriv in kurskod eller kursnamn",
         "manageExistingCourses": "Hantera existerande kurser",
         "manageTag": "Sök efter taggar",
         "manageUser": "Sök efter användare",
@@ -126,6 +126,10 @@
         "active": "Aktiv",
         "nrOfUsersFound": "Hittade {{count}} användare",
         "noUsersFound": "Inga användare hittade",
+        "addTeacherToSubject": "Lägg till lärare till kurs: {{subject}}",
+        "addTeacher": "Lägg till lärare",
+        "cancelChanges": "Avbryt ändringar",
+        "searchSubjects": "Sök kurser",
         "answerCardComments": {
             "commentLabelMarker": "✔ Din senaste kommentar",
             "commentsListTitle": "Läs Kommentarer",
