Update translations to be more sclable.

--- a/src/locale/en/shared.json
+++ b/src/locale/en/shared.json
@@ -8,6 +8,13 @@
     "askedBy": "Asked by",
     "answer": "answer",
     "answers": "answers",
+    "lessThanMinuteAgo": "Less than a minute ago",
+    "oneMinuteAgo": "One minute ago",
+    "minutesAgo": "{{minutes}} minutes ago",
+    "oneHourAgo": "One hour ago",
+    "hoursAgo": "{{hours}} hours ago",
+    "oneDayAgo": "One day ago",
+    "daysAgo": "{{days}} days ago",
     "nonPublicQuestion": "Non-public question",
     "publicQuestion": "Public question",
     "register": "Register",
@@ -64,8 +71,40 @@
     "tagLimitWarning": "Please limit your tags to 5 or fewer.",
     "nrOfQuestionsFound": "Found {{count}} questions",
     "backToQA": "Back to Q&A",
-    "acceptedAnswer": "Godkänt svar",
-    "markAsAccepted": "Markera som godkänt",
+    "acceptedAnswer": "Accepted answer",
+    "markAsAccepted": "Mark as accepted",
+    "courseManagement": "Course Management",
+    "userManagement": "User Management",
+    "tagManagement": "Tag Management",
+    "addNewCourse": "Add new Course Code",
+    "courseName": "Course Name",
+    "teacherName": "Initial teachers (optional, comma seperated)",
+    "courseCodePlaceHolder": "Enter the course code",
+    "courseNamePlaceHolder": "Enter the course name",
+    "teacherNamePlaceHolder": "e.g. teacher1@ltu.se, teacher2@ltu.se",
+    "addCourse": "Add Course",
+    "searchCoursePlaceholder": "Enter the course code or name",
+    "manageExistingCourses": "Manage Existing Courses",
+    "manageTag": "Search tags",
+    "areYouSureYouWantToDeleteTag": "Are You Sure You Want To Delete",
+    "deleteTag": "Confirm Delete",
+    "manageUser": "Search Users",
+    "courseCode": "Course Code",
+    "teachers": "Teachers",
+    "actions": "Actions",
+    "searchUser": "Search users by username or email",
+    "status": "Status",
+    "block": "Block",
+    "unblock": "Unblock",
+    "blocked": "Blocked",
+    "active": "Active",
+    "nrOfUsersFound": "Found {{count}} users",
+    "noUsersFound": "No users found",
+    "addTeacherToSubject": "Add teachers to course: {{subject}}",
+    "addTeacher": "Add Teacher",
+    "cancelChanges": "Cancel changes",
+    "searchSubjects": "Search courses",
+    "manageCourse": "Enter the course code or Name",
     "deleteQuestion": "Delete question",
     "deleteQuestionPrompt": "Are you sure you want to delete this question?",
     "delete": "Delete",
