--- a/src/locale/sv/shared.json
+++ b/src/locale/sv/shared.json
@@ -8,6 +8,13 @@
     "askedBy": "Frågad av",
     "answer": "svar",
     "answers": "svar",
+    "lessThanMinuteAgo": "Mindre än en minut sedan",
+    "oneMinuteAgo": "En minut sedan",
+    "minutesAgo": "{{minutes}} minuter sedan",
+    "oneHourAgo": "En timma sedan",
+    "hoursAgo": "{{hours}} timmar sedan",
+    "oneDayAgo": "En dag sedan",
+    "daysAgo": "{{days}} dagar sedan",
     "nonPublicQuestion": "Icke-offentlig fråga",
     "publicQuestion": "Offentlig fråga",
     "register": "Registrering",
@@ -64,8 +71,40 @@
     "tagLimitWarning": "Vänligen begränsa dina taggar till högst 5.",
     "nrOfQuestionsFound": "Hittade {{count}} frågor",
     "backToQA": "Tillbaka till Frågor & Svar",
-    "acceptedAnswer": "Accepted answer",
-    "markAsAccepted": "Mark as accepted",
+    "acceptedAnswer": "Godkänt svar",
+    "markAsAccepted": "Markera som godkänt",
+    "courseManagement": "Hantera kurser",
+    "userManagement": "Hantera användare",
+    "tagManagement": "Hantera taggar",
+    "addNewCourse": "Lägg till ny kurskod",
+    "courseName": "Kursnamn",
+    "teacherName": "Initiala lärare (valfritt, komma-separerade)",
+    "courseCodePlaceHolder": "Skriv in kurskod",
+    "courseNamePlaceHolder": "Skriv in kursnamn",
+    "teacherNamePlaceHolder": "T.ex lärare1@ltu.se, lärare2@ltu.se",
+    "addCourse": "Lägg till kurs",
+    "searchCoursePlaceholder": "Skriv in kurskod eller kursnamn",
+    "manageExistingCourses": "Hantera existerande kurser",
+    "manageTag": "Sök efter taggar",
+    "areYouSureYouWantToDeleteTag": "Är du säker på att du vill readera",
+    "deleteTag": "Bekräta Radera",
+    "manageUser": "Sök efter användare",
+    "courseCode": "Kurskod",
+    "teachers": "Lärare",
+    "actions": "Åtgärder",
+    "searchUser": "Sök användare på användarnamn eller e-postadress",
+    "status": "Status",
+    "block": "Blockera",
+    "unblock": "Avblockera",
+    "blocked": "Blockerad",
+    "active": "Aktiv",
+    "nrOfUsersFound": "Hittade {{count}} användare",
+    "noUsersFound": "Inga användare hittade",
+    "addTeacherToSubject": "Lägg till lärare till kurs: {{subject}}",
+    "addTeacher": "Lägg till lärare",
+    "cancelChanges": "Avbryt ändringar",
+    "searchSubjects": "Sök kurser",
+    "manageCourse": "Skriv in kurskod eller kursnamn",
     "deleteQuestion": "Radera fråga",
     "deleteQuestionPrompt": "Är du säker på att du vill radera denna fråga?",
     "delete": "Radera",
