--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -74,7 +74,6 @@
         "backToQA": "Back to Q&A",
         "acceptedAnswer": "Accepted answer",
         "markAsAccepted": "Mark as accepted",
-
         "header": {
             "headerHeadline": "LTU Q&A",
             "linkAdmin": "Admin",
@@ -83,7 +82,6 @@
             "linkLoginRegister": "Login/Register",
             "linkHelp": "Help?"
         },
-
         "teacherDashboard": {
             "title": "Teacher Dashboard",
             "manageTopicsFor": "Manage Topics for",
@@ -133,6 +131,7 @@
         "addTeacher": "Add Teacher",
         "cancelChanges": "Cancel changes",
         "searchSubjects": "Search courses",
+        "manageCourse": "Enter the course code or Name",
         "answerCardComments": {
             "commentLabelMarker": "✔ Your latest comment",
             "commentsListTitle": "View Comments",
