--- a/src/locale/en/answerCardComments.json
+++ b/src/locale/en/answerCardComments.json
@@ -8,6 +8,7 @@
         "deleteCommentInfo": "Delete comment",
         "submitCommentInfo": "Submit comment",
         "createCommentPlaceholder": "Add a comment..",
-        "submitComment": "Comment"
+        "submitComment": "Comment",
+        "noCommentsLabel": "No comments exist for this answer"
     }
 }
