Update translations to be more sclable.

--- a/src/locale/en/forms.json
+++ b/src/locale/en/forms.json
@@ -1,6 +1,14 @@
 {
     "answerForm": {
         "submitInfo": "Submit Answer",
+        "cancelButton": "Cancel",
         "submitButton": "Submit"
+    },
+    "commentForm": {
+        "submitInfo": "Submit Answer",
+        "cancelButton": "Cancel",
+        "submitButton": "Submit",
+        "submitCommentInfo": "Submit comment",
+        "submitComment": "Comment"
     }
 }
