--- a/src/locale/sv/forms.json
+++ b/src/locale/sv/forms.json
@@ -1,6 +1,14 @@
 {
     "answerForm": {
         "submitInfo": "Sänd svar",
-        "submitButton": "Sänd"
+        "cancelButton": "Stäng",
+        "submitButton": "Submit"
+    },
+    "commentForm": {
+        "submitInfo": "Submit Answer",
+        "cancelButton": "Stäng",
+        "submitButton": "Submit",
+        "submitComment": "Kommentera",
+        "submitCommentInfo": "Skapa kommentar"
     }
 }
