--- a/src/locale/sv/shared.json
+++ b/src/locale/sv/shared.json
@@ -20,6 +20,7 @@
     "register": "Registrering",
     "email": "E-post",
     "password": "Lösenord",
+    "userBlocked": "Ditt konto har blivit blockerat. Vänligen kontakta din lärare för att begära en upplåsning.",
     "wrongCredentials": "Ogiltig e-postadress eller lösenord. Vänligen försök igen.",
     "serverProblem": "Något gick fel. Vänligen försök igen senare.",
     "usernameTaken": "Användarnamn ej tillgängligt. Vänligen välj ett annat.",
