--- a/src/locale/sv/adminDashboard.json
+++ b/src/locale/sv/adminDashboard.json
@@ -26,6 +26,9 @@
         "blocked": "Blockerad",
         "active": "Aktiv",
         "nrOfUsersFound": "Hittade {{count}} användare",
-        "noUsersFound": "Inga användare hittade"
+        "noUsersFound": "Inga användare hittade",
+        "nrOfTagFound": "Hittade {{count}} taggar",
+        "noTagFound": "Inga taggar hittade",
+        "TagName": "Taggnamn"
     }
 }
