fix course management

--- a/src/locale/en/adminDashboard.json
+++ b/src/locale/en/adminDashboard.json
@@ -29,6 +29,8 @@
         "noUsersFound": "No users found",
         "nrOfTagFound": "Found {{count}} tags",
         "noTagFound": "No tag found",
-        "TagName": "Tag Name"
+        "TagName": "Tag Name",
+        "confirmation": "Confirmation",
+        "courseCreated": "Course created"
     }
 }
